# Aggressive-Trading-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  cli.py  config.py  logging_config.py  main.py
config/: scheduling.yaml
docs/: ARCHITECTURE.md  AUDIT_BRIEF_CONVICTION_ROUND.md  BACKTESTING.md  CORPUS_REAL_MARK_2021_2026.md  FEATURE_VALIDATION_RESULT.md  FLOW_EXPERIMENT_DISPOSITION.md  FLOW_EXPERIMENT_PREREGISTRATION.md  FLOW_FEATURE_VALIDATION_RESULT.md  FLOW_SWEEP_PASS_RESULT.md  GO_LIVE.md  METHODOLOGY.md  OUTCOMES.md  PRODUCT_STANCE.md  RISK_POLICY.md  ROADMAP.md  SHORT_DURATION.md  SHORT_DURATION_V2_PLAN.md  STRATEGIES.md  VRP_STAGE1_ADDENDUM.md  VRP_STAGE1_RESULT.md  VRP_STAGE2_RESULT.md  feature_registry.json  flow_feature_registry.json  flow_sweep_pass_report.json  flow_sweep_preregistration.md  vrp_coverage_report.json  vrp_preregistration.md  vrp_registry_entry.json  vrp_stage1_report.json  vrp_stage2_preregistration.md  vrp_stage2_report.json
scripts/: flow_experiment.py  flow_sweep_pass.py  forward_vs_backtest.py  hand_check_trade.py  live_dry_run.py  real_mark_backtest.py  rh_sync.py  validate_features.py  validate_flow_features.py  vrp_coverage.py  vrp_stage1.py  vrp_stage2.py
tests/: conftest.py  test_alerts.py  test_api.py  test_backtest.py  test_clock.py  test_conviction_gate.py  test_correlation_gate.py  test_credit_backtest.py  test_cross_check.py  test_dashboard.py  test_detectors.py  test_event_bus.py  test_events_service.py  test_execution_guard.py  test_exit_plan.py  test_feature_validation.py  test_flow_experiment.py  test_flow_quality.py  test_flow_strike.py  test_fmp_earnings.py  test_freshness.py  test_funnel.py  test_historical_backtest.py  test_iv.py  (+60 more)
(+177 files in other folders)
