[project]
name = "aggressive-trading-bot"
version = "0.1.0"
description = "Options-trading research and decision-support platform for a small, aggressive account."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "jjsaw5" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "sqlalchemy-libsql>=0.1.0",  # Turso / libSQL durable backend (sync dialect)
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.4",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "freezegun>=1.5",
]
# Robinhood runtime integration (unofficial API). Install with:
#   pip install -e ".[robinhood]"
robinhood = [
    "robin-stocks>=3.1",
    "pyotp>=2.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["web/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# UP042: `(str, Enum)` retained for portability. B008: FastAPI's Depends() in
# argument defaults is the intended idiom.
ignore = ["E501", "UP042", "B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
